# blockchain

./: README.md  go.mod  go.sum  main.go  pow.go
blockchain/: CMakeCache.txt  CMakeLists.txt  Makefile  block.go  blockchain  blockchain.go  cmake_install.cmake  main.cpp  pow.go
blockchain/block_db/: LOG
blockchain/include/: block.h  blockchain.h  hash.cpp  hash.h
blockchain/src/: block.cpp  block.h  blockchain.cpp  blockchain.h  hash.h  transaction.h
wallet/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  wallet
wallet/include/: wallet.h
wallet/src/: main.cpp
